--- a/Web.config
+++ b/Web.config
@@ -17,6 +17,7 @@
   <system.web>
     <compilation targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -51,7 +52,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="GitHub" connectionString="Data Source=localhost;Initial Catalog=GitHub;User ID=sa;Password=1;Connection Timeout=0;Connection Lifetime = 0;Pooling=false" providerName="System.Data.SqlClient" />
+    <!--<add name="TrendHub" connectionString="Data Source=nz3otqff22.database.windows.net,1433;Initial Catalog=TrendHub;User ID=carekidds;Password=C4r3k1dd5;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="TrendHub" connectionString="Data Source=nz3otqff22.database.windows.net,1433;Initial Catalog=TrendHub;User ID=carekidds;Password=C4r3k1dd5;Connection Timeout=0;Connection Lifetime = 0;Pooling=false" providerName="System.Data.SqlClient" />-->
+    <add name="TrendHub" connectionString="$(ReplacableToken_TrendHub-Web.config Connection String_0)" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
 <!--ProjectGuid: A9610E7B-CDC8-4910-B5C7-6B986E061DF5-->
