--- a/Web.config
+++ b/Web.config
@@ -15,9 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm" />
+    <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -53,8 +53,7 @@
   </entityFramework>
   <connectionStrings>
     <!--<add name="TrendHub" connectionString="Data Source=nz3otqff22.database.windows.net,1433;Initial Catalog=TrendHub;User ID=carekidds;Password=C4r3k1dd5;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="TrendHub" connectionString="Data Source=nz3otqff22.database.windows.net,1433;Initial Catalog=TrendHub;User ID=carekidds;Password=C4r3k1dd5;Connection Timeout=0;Connection Lifetime = 0;Pooling=false" providerName="System.Data.SqlClient" />-->
-    <add name="TrendHub" connectionString="$(ReplacableToken_TrendHub-Web.config Connection String_0)" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <!--<add name="TrendHub" connectionString="Data Source=nz3otqff22.database.windows.net,1433;Initial Catalog=TrendHub;User ID=carekidds;Password=C4r3k1dd5;Connection Timeout=0;Connection Lifetime = 0;Pooling=false" providerName="System.Data.SqlClient" />-->
+  <add name="TrendHub" connectionString="Server=tcp:nz3otqff22.database.windows.net,1433;Initial Catalog=TrendHub;Persist Security Info=False;User ID=carekidds;Password=C4r3k1dd5;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=False;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>  
 </configuration>
-<!--ProjectGuid: A9610E7B-CDC8-4910-B5C7-6B986E061DF5-->
